name:          distributed-process-tests
version:       0.4
synopsis:      Tests for distributed-process.
homepage:      http://github.com/haskell-distributed/distributed-process-tests
license:       BSD3
license-file:  LICENSE
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
Maintainer:    watson.timothy@gmail.com, edsko@well-typed.com, duncan@well-typed.com
copyright:     Well-Typed LLP
category:      Control
build-type:    Simple
cabal-version: >=1.8

library
  exposed-modules:   Network.Transport.Test
                     Control.Distributed.Process.Tests.CH
                     Control.Distributed.Process.Tests.Closure
                     Control.Distributed.Process.Tests.Mx
                     Control.Distributed.Process.Tests.Receive
                     Control.Distributed.Process.Tests.Stats
                     Control.Distributed.Process.Tests.Tracing
                     Control.Distributed.Process.Tests.Internal.Utils
  Build-Depends:     base >= 4.4 && < 5,
                     ansi-terminal >= 0.5 && < 0.6,
                     binary >= 0.5 && < 0.8,
                     bytestring >= 0.9 && < 0.11,
                     distributed-process,
                     distributed-static,
                     HUnit >= 1.2 && < 1.3,
                     network-transport >= 0.3 && < 0.4,
                     network-transport-tcp >= 0.3 && < 0.4,
                     network >= 2.3 && < 2.5,
                     random >= 1.0 && < 1.1,
                     rematch >= 0.1.2.1,
                     test-framework >= 0.6 && < 0.9,
                     test-framework-hunit >= 0.2.0 && < 0.4
  hs-source-dirs:   src
  ghc-options:      -Wall -fno-warn-unused-do-bind
  extensions:       CPP,
                    ExistentialQuantification,
                    FlexibleInstances,
                    DeriveDataTypeable,
                    DeriveGeneric,
                    GeneralizedNewtypeDeriving,
                    OverlappingInstances,
                    RankNTypes,
                    ScopedTypeVariables
